--- a/serverside/pom.xml
+++ b/serverside/pom.xml
@@ -12,11 +12,11 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
+   <!-- <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-jaxrs</artifactId>
       <version>3.1.0.Final</version>
-    </dependency>
+    </dependency> -->
 
   </dependencies>
   <build>
